Updated plots pages

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </div>
         <!-- Footer Section -->
         <footer>
-          <div class="footer">Copyright &copy; Joeseph Raasch 2021</div>
+          <div class="footer">Copyright &copy; Joseph Raasch 2021</div>
         </footer>
       
         <!-- Bootstrap JS -->
